# f1-analysis

./: pyproject.toml
src/aggregator/: aggregator.py  aggregator_config.json
src/cleaner/: cleaner.py  cleaner_config.json
src/scrapper/: scrapper.py
